添加配置文件入口
